src/objects/Group_Members__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Group_Members3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Members</relationshipLabel>
        <relationshipName>Group_Members2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SJM_ID__c</fullName>
        <formula>Associated_Account__r.SJM_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SJM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Group Member</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Group Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>